Hash backup codes in the database using `password_hash`

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/otp_app.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/otp_app.html.twig
@@ -20,7 +20,7 @@
         <li>
             <p>{{ 'config.otp.app.two_factor_code_description_3'|trans }}</p>
 
-            <p><strong>{{ app.user.getBackupCodes|join("\n")|nl2br }}</strong></p>
+            <p><strong>{{ backupCodes|join("\n")|nl2br }}</strong></p>
         </li>
         <li>
             <p>{{ 'config.otp.app.two_factor_code_description_4'|trans }}</p>
