--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -12,6 +12,10 @@
   .pagination {
     margin-left: auto;
   }
+  
+  .card-tag-labels li {
+    max-width: 50%;
+  }
 }
 
 @media only screen and (max-width: 992px) {
