--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -164,6 +164,7 @@ a.original:not(.waves-effect) {
   border-radius: 3px;
   color: #fff;
   cursor: default;
+  line-height: 20px;
 }
 
 .card-entry-labels li {
@@ -188,7 +189,7 @@ a.original:not(.waves-effect) {
 }
 
 .card-tag-link {
-  width: calc(100% - 48px);
+  width: calc(100% - 24px);
   line-height: 1.3;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -212,7 +213,7 @@ a.original:not(.waves-effect) {
 
 .card-tag-labels {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
 
 .card-tag-labels li {
